# fire_tracking_system

./: CMakeLists.txt  README.md  package.xml
config/: LUT.txt
include/: BaseCommunication.hpp  BaseSerialComposer.hpp  BaseSerialParser.hpp  CameraScanner1D.hpp  CircleDetector.hpp  CommChecker.hpp  ComplementaryFilter.hpp  ControlSystem.hpp  ControlledTimer.hpp  Controller.hpp  ControllerActuationBridge.hpp  ControllerOutputMsg.hpp  DataFilter.hpp  FireAssessmentStatus.hpp  FireAssessor.hpp  GyroOrientationObserver.hpp  HeartbeatMsg.hpp  HeatCenterProvider.hpp  ImageConverter.hpp  LUT2D.hpp  Lepton3_5.hpp  MissionStateManager.hpp  MsgHandler.hpp  Negator.hpp  NozzleOrientationMsg.hpp  NozzleOrientationProvider.hpp  NozzlePitch_UserReference.hpp  NozzleYaw_UserReference.hpp  PIDController.hpp  PVProvider.hpp  PitchRate_PVProvider.hpp  ProcessVariableReference.hpp  PumpController.hpp  PumpRosBridge.hpp  ROSUnit_NozzleController.hpp  ROSUnit_SetPoint.hpp  ROSUnit_SetVectorSrv.hpp  Switch.hpp  SwitchMsg.hpp  Switcher.hpp  (+16 more)
scripts/: uvc.py  uvc_circles.py
src/: BaseCommunication.cpp  BaseSerialComposer.cpp  BaseSerialParser.cpp  CameraScanner1D.cpp  CircleDetector.cpp  CommChecker.cpp  ComplementaryFilter.cpp  ControlSystem.cpp  ControlledTimer.cpp  ControllerActuationBridge.cpp  ControllerOutputMsg.cpp  FireAssessor.cpp  GyroOrientationObserver.cpp  HeartbeatMsg.cpp  HeatCenterProvider.cpp  ImageConverter.cpp  LUT2D.cpp  Lepton3_5.cpp  MissionStateManager.cpp  MsgEmitter.cpp  MsgHandler.cpp  Negator.cpp  NozzleOrientationMsg.cpp  NozzleOrientationProvider.cpp  NozzlePitch_UserReference.cpp  NozzleYaw_UserReference.cpp  PIDController.cpp  PitchRate_PVProvider.cpp  ProcessVariableReference.cpp  PumpController.cpp  PumpRosBridge.cpp  ROSUnit_NozzleController.cpp  ROSUnit_SetPoint.cpp  ROSUnit_SetVectorSrv.cpp  SerialDataMsg.cpp  SwitchMsg.cpp  Switcher.cpp  ThermalImageMsg.cpp  TimedSwitch.cpp  UGVFireAssessor.cpp  (+12 more)
